--- a/nbproject/Makefile-genesis.properties
+++ b/nbproject/Makefile-genesis.properties
@@ -1,8 +1,8 @@
 #
-#Mon Oct 07 14:16:10 MDT 2019
-default.Pack.dfplocation=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.25\\packs\\Microchip\\PIC16Fxxx_DFP\\1.0.9
+#Mon Oct 28 06:31:57 MDT 2019
+default.Pack.dfplocation=C\:\\Users\\jacob\\.mchp_packs\\Microchip\\PIC16Fxxx_DFP\\1.0.9
 default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.25\\mpasmx
-configurations-xml=d267b44a1833480b8595961332696f36
+configurations-xml=29cf838f014b2d235f728fa911e1ac4d
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=6e453b0cf7f7da72a932cfdb2f655401
 default.languagetoolchain.version=5.84
 host.platform=windows
