--- a/nbproject/Makefile-genesis.properties
+++ b/nbproject/Makefile-genesis.properties
@@ -1,8 +1,8 @@
 #
-#Mon Oct 28 07:24:16 MDT 2019
+#Sun Nov 10 20:30:35 MST 2019
 default.Pack.dfplocation=C\:\\Users\\jacob\\.mchp_packs\\Microchip\\PIC16Fxxx_DFP\\1.0.9
 default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.25\\mpasmx
-configurations-xml=29cf838f014b2d235f728fa911e1ac4d
+configurations-xml=7a956f741af58033b2e98a8faba4f524
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=6e453b0cf7f7da72a932cfdb2f655401
 default.languagetoolchain.version=5.84
 host.platform=windows
