--- a/nbproject/Makefile-genesis.properties
+++ b/nbproject/Makefile-genesis.properties
@@ -1,8 +1,8 @@
 #
-#Sun Nov 10 20:30:35 MST 2019
-default.Pack.dfplocation=C\:\\Users\\jacob\\.mchp_packs\\Microchip\\PIC16Fxxx_DFP\\1.0.9
+#Mon Nov 11 10:02:18 MST 2019
+default.Pack.dfplocation=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.25\\packs\\Microchip\\PIC16Fxxx_DFP\\1.0.9
 default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.25\\mpasmx
-configurations-xml=7a956f741af58033b2e98a8faba4f524
+configurations-xml=973f5b54a24b848baf419da8d2c4d491
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=6e453b0cf7f7da72a932cfdb2f655401
 default.languagetoolchain.version=5.84
 host.platform=windows
